# fmt-adapter

./: .gitmodules  CMakeLists.txt  README.md  description.json
.metaconfigure/: description.json
metaconfigure/: description.json  description.py
